# StellarFlip

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pnpm-workspace.yaml
.github/: GOOD_FIRST_ISSUES.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good-first-issue.yml
.github/workflows/: dependency-audit.yml
contracts/: Cargo.toml  README.md
contracts/card-nft/: Cargo.toml
contracts/card-nft/src/: lib.rs
contracts/leaderboard/: Cargo.toml
contracts/leaderboard/src/: lib.rs
contracts/leaderboard/test_snapshots/tests/: keeps_best_score_per_player.1.json  stores_global_and_daily_scores.1.json
docs/: README.md  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
docs/app/: globals.css  layout.tsx  page.tsx
docs/app/architecture/: page.tsx
docs/app/contributing/: page.tsx
docs/app/deployment/: page.tsx
frontend/: .env.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/app/how-to-play/: page.tsx
frontend/app/inventory/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/components/: game-shell.tsx  inventory-panel.tsx  leaderboard-panel.tsx  memory-game.tsx  site-header.tsx  wallet-button.tsx
frontend/components/providers/: wallet-provider.tsx
frontend/lib/: storage.ts
frontend/lib/game/: constants.ts  sanitize.ts  types.ts  utils.ts
frontend/lib/stellar/: config.ts  contracts.ts  freighter.ts
frontend/types/: lucide-react.d.ts
(+3 files in other folders)
