[package]
name = "stellar-flip-leaderboard"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
authors = ["Stellar Flip contributors"]

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
soroban-sdk = { version = "=22.0.11", features = ["testutils", "alloc"] }
